@@ -14,6 +14,7 @@ LIST OF CHANGES
      if the target tileviz directory is not available, fall back to the one
      expected for the old-style run folder
  - redundant filename method of the illumina component object removed
+ - two modes for status monitor - with and without inotify
 
 release 87.3
  - for a run on ESA, redirect to an ESA url
